Fixed some spelling issues

--- a/index.html
+++ b/index.html
@@ -66,22 +66,21 @@
                         </a>
                      </div>
                      <ul>
-                        <li><a class="scroll" href="#wrapper">Home</a></li>
-                        <li><a class="scroll" href="#resto">About</a></li>
-                        <li><a class="scroll" href="#menu">Menu</a></li>
-                        <li><a class="scroll" href="#special">Angebote</a></li>
-                        <li><a class="scroll" href="#reservation">Contact</a></li>
+                        <li><a class="scroll" href="#inner-home">Home</a></li>
+                        <li><a class="scroll" href="#resto">Über uns</a></li>
+                        <li><a class="scroll" href="#menu">Speisekarte</a></li>
+                        <li><a class="scroll" href="#reservation">Kontakt</a></li>
                         <li><a class="scroll" href="#gallery">Impressionen</a></li>
                         <li><a class="scroll" href="#contact">Location</a></li>
-                        <li><a class="scroll" href="/privacy.html">Privacy</a></li>
-                        <li><a class="scroll" href="/imprint.html">Imprint</a></li>
+                        <li><a class="scroll" href="/privacy.html">Datenschutz</a></li>
+                        <li><a class="scroll" href="/imprint.html">Impressum</a></li>
                      </ul>
                   </nav>
                </div>
             </header>
             <!--End header-->
             <!--Inner hero-->
-            <div class="inner-hero">
+            <div class="inner-hero" id="inner-home">
                <!--Container-->
                <div class="container hero-content">
                   <!--Row-->
@@ -145,7 +144,7 @@
                   <div class="col-sm-12 text-center front-p">
                      <h1 class="large" style="font-family: 'Petit Formal Script', cursive;">Kontakt</h1>
                      <p class="lead white top">Momentan: $STATUS$ </p>
-                     <a href="#reservation" class="but scroll">Konktieren Sie uns</a>
+                     <a href="#reservation" class="but scroll">Kontaktieren Sie uns</a>
                   </div>
                </div>
                <!--End row-->
@@ -229,7 +228,7 @@
 
                            <div class="block-content  pb-25 mb-25">
                               <h2 class="mb-5 ">Penne Salmone</h2>
-                              <p>Sahnesoße, LAchs, Cherrytomaten</p>
+                              <p>Sahnesoße, Lachs, Cherrytomaten</p>
                               <span class="block-price ">7,50€</span>
                               <span class="dots"></span>
                            </div>
@@ -245,7 +244,7 @@
 
                            <div class="block-content  pb-25 mb-25">
                               <h2 class="mb-5 ">Penne La Locanda</h2>
-                              <p>tomaten-Sahnesoße, Garnelen, Tintenfisch, Muscheln, Shrimps</p>
+                              <p>Tomaten-Sahnesoße, Garnelen, Tintenfisch, Muscheln, Shrimps</p>
                               <span class="block-price ">7,50€</span>
                               <span class="dots"></span>
                            </div>
@@ -269,7 +268,7 @@
 
                            <div class="block-content  pb-25 mb-25">
                               <h2 class="mb-5 ">Penne Mare e Monti</h2>
-                              <p>Tomaten-Sahnesoße, gemischte Pilz, Shirmps</p>
+                              <p>Tomaten-Sahnesoße, gemischte Pilz, Shrimps</p>
                               <span class="block-price ">7,50€</span>
                               <span class="dots"></span>
                            </div>
@@ -278,7 +277,7 @@
                            </div>
                            <div class="block-content  pb-25 mb-25">
                               <h2 class="mb-5 ">Trofie La Locanda</h2>
-                              <p>Tomaten-Sahnesoße, granelen, Tintenfisch, Muscheln, Shrimps</p>
+                              <p>Tomaten-Sahnesoße, Garnelen, Tintenfisch, Muscheln, Shrimps</p>
                               <span class="block-price ">7,90€</span>
                               <span class="dots"></span>
                            </div>
@@ -343,7 +342,7 @@
 
                            <div class="block-content  pb-25 mb-25">
                               <h2 class="mb-5 ">Gnocchi 4 Formaggi</h2>
-                              <p>Sahnesoße, Mazzarella, Gorgonzola, Emmentaler, Grana</p>
+                              <p>Sahnesoße, Mozzarella, Gorgonzola, Emmentaler, Grana</p>
                               <span class="block-price ">7,50€</span>
                               <span class="dots"></span>
                            </div>
@@ -364,7 +363,7 @@
 
                            <div class="block-content  pb-25 mb-25">
                               <h2 class="mb-5 ">Tortellini alla Panna</h2>
-                              <p>Sahnesoße, Vorderschinkne, Petersilie</p>
+                              <p>Sahnesoße, Vorderschinken, Petersilie</p>
                               <span class="block-price ">6,90€</span>
                               <span class="dots"></span>
                            </div>
@@ -385,23 +384,29 @@
                               <span class="dots"></span>
                            </div>
                            <div class="block-cat">
-                              <h2 class="mb-30">Alforno</h2>
+                              <h2 class="mb-30">Al forno</h2>
                            </div>
                            <div class="block-content  pb-25 mb-25">
-                              <h2 class="mb-5 ">Penne al forno</h2>
-                              <p>Tomatensoße, Hackfleisch, Mozzarella</p>
-                              <span class="block-price ">6,90€</span>
-                              <span class="dots"></span>
-                           </div>
+                           <h2 class="mb-5 ">Penne al forno</h2>
+                           <p>Tomatensoße, Hackfleisch, Mozzarella</p>
+                           <span class="block-price ">6,90€</span>
+                           <span class="dots"></span>
+                        </div>
 
 
                            <div class="block-content  pb-25 mb-25">
                               <h2 class="mb-5 ">Cannelloni al Forno</h2>
-                              <p>Tomatensoße, Hackfelisch, Schinken, frische Champingons</p>
+                              <p>Tomatensoße, Hackfleisch, Schinken, frische Champingnons</p>
                               <span class="block-price ">6,90€</span>
                               <span class="dots"></span>
                            </div>
 
+                           <div class="block-content  pb-25 mb-25">
+                              <h2 class="mb-5 ">Cannelloni Ricotta e Spinaci</h2>
+                              <p>Ricotta und Spinat</p>
+                              <span class="block-price ">6,90€</span>
+                              <span class="dots"></span>
+                           </div>
 
                            <div class="block-content  pb-25 mb-25">
                               <h2 class="mb-5 ">Gnocchi al Forno</h2>
@@ -417,6 +422,13 @@
                               <span class="block-price ">6,90€</span>
                               <span class="dots"></span>
                            </div>
+                           <div class="block-content  pb-25 mb-25">
+                              <h2 class="mb-5 ">Penne dello Chef</h2>
+                              <p>Mozzarella, Friarielli (Rübstiel)</p>
+                              <span class="block-price ">7,50€</span>
+                              <span class="dots"></span>
+                           </div>
+
                            <div class="block-cat">
                               <h2 class="mb-30">Tagliatelle</h2>
                            </div>
@@ -446,7 +458,7 @@
 
                            <div class="block-content  pb-25 mb-25">
                               <h2 class="mb-5 ">Tagliatelle Norcina</h2>
-                              <p>Sohnesoße, gemischte Pilze, italienische Salsiccia</p>
+                              <p>Sahhnesoße, gemischte Pilze, italienische Salsiccia</p>
                               <span class="block-price ">7,50€</span>
                               <span class="dots"></span>
                            </div>
@@ -464,7 +476,7 @@
 
                            <div class="block-content  pb-25 mb-25">
                               <h2 class="mb-5 ">Spaghetti Bolognese</h2>
-                              <p>Tomatensoße, Hackfelisch</p>
+                              <p>Tomatensoße, Hackfleisch</p>
                               <span class="block-price ">5,90€</span>
                               <span class="dots"></span>
                            </div>
@@ -480,7 +492,7 @@
 
                            <div class="block-content  pb-25 mb-25">
                               <h2 class="mb-5 ">Spaghetti Carbonara</h2>
-                              <p>Sepck, Rührei, Grana (auf Anfrage auch mit Sahne)</p>
+                              <p>Speck, Rührei, Grana (auf Anfrage auch mit Sahne)</p>
                               <span class="block-price ">6,50€</span>
                               <span class="dots"></span>
                            </div>
@@ -488,7 +500,7 @@
 
                            <div class="block-content  pb-25 mb-25">
                               <h2 class="mb-5 ">Spaghetti 4 Formaggi</h2>
-                              <p>Sahnesoße, Mozzarella, Gorgonzola, Emmentaler, grana</p>
+                              <p>Sahnesoße, Mozzarella, Gorgonzola, Emmentaler, Grana</p>
                               <span class="block-price ">6,90€</span>
                               <span class="dots"></span>
                            </div>
@@ -528,7 +540,7 @@
 
                             <div class="block-content  pb-25 mb-25">
                                 <h2 class="mb-5 ">Pizza Bruschetta</h2>
-                                <p>Pizzabrot, firsche Tomaten, Basilikum, Gewürze, Balsamico-Creme</p>
+                                <p>Pizzabrot, firsche Tomaten, Basilikum, Knoblauch, Balsamico-Creme</p>
                                 <span class="block-price ">Ø 38cm: 7,50€ | Ø 40cm 11,00€ | Ø 50cm 14,00€ </span>
                                 <span class="dots"></span>
                             </div>
@@ -592,7 +604,7 @@
 
                             <div class="block-content  pb-25 mb-25">
                                 <h2 class="mb-5 ">Pizza Campagnola</h2>
-                                <p>Tomatensoße, Mozarella, gegrillte Zucchini, Aubergienen, Paprika, Gewürze</p>
+                                <p>Tomatensoße, Mozarella, gegrillte Zucchini, Aubergienen, Paprika, Knoblauch</p>
                                 <span class="block-price ">Ø 38cm: 8,90€ | Ø 40cm 13,90€ | Ø 50cm 18,40€ </span>
                                 <span class="dots"></span>
                             </div>
@@ -894,7 +906,49 @@
                            <div class="block-cat">
                               <h2 class="mb-30">Forcacce</h2>
                            </div>
-
+                           <div class="block-content  pb-25 mb-25">
+                              <h2 class="mb-5 ">Pizza Forcaccia</h2>
+                              <p>Tomatensoße, Mozzarella, Thunfisch, Oliven, Emmentaler</p>
+                              <span class="block-price ">Ø 38cm: 9,50€ | Ø 40cm 14,50€ </span>
+                              <span class="dots"></span>
+                           </div>
+                           <div class="block-content  pb-25 mb-25">
+                              <h2 class="mb-5 ">Forcaccia Campagnola</h2>
+                              <p>Tomatensoße, Mozzarella, gegrillte Zucchini, Paprika und Auberginen, Oliven, Gewürze, Knoblauch</p>
+                              <span class="block-price ">Ø 38cm: 9,50€ | Ø 40cm 14,50€</span>
+                              <span class="dots"></span>
+                           </div>
+                           <div class="block-content  pb-25 mb-25">
+                              <h2 class="mb-5 ">Forcaccia 4 Formaggi</h2>
+                              <p>Tomatensoße, Mozzarella,Emmentaler, Gorgonzola, Grana</p>
+                              <span class="block-price ">Ø 38cm: 9,50€ | Ø 40cm 14,50€</span>
+                              <span class="dots"></span>
+                           </div><div class="block-content  pb-25 mb-25">
+                           <h2 class="mb-5 ">Forcaccia Mediterranea</h2>
+                           <p>Tomatensoße, Mozzarella, scharfe kalabresische Salami, frische Champingnons, frische Tomaten, Oliven</p>
+                           <span class="block-price ">Ø 38cm: 9,50€ | Ø 40cm 14,50€</span>
+                           <span class="dots"></span>
+                        </div><div class="block-content  pb-25 mb-25">
+                           <h2 class="mb-5 ">Forcaccia Bianca</h2>
+                           <p>Mozzarella, Speck, Artischocken, Philadelphia, Oliven</p>
+                           <span class="block-price ">Ø 38cm: 9,50€ | Ø 40cm 14,50€</span>
+                           <span class="dots"></span>
+                        </div><div class="block-content  pb-25 mb-25">
+                           <h2 class="mb-5 ">Forcaccia Don Filipo</h2>
+                           <p>Tomatensoße, Mozzarella, Speck, frische Champingnons, Gorgonzola</p>
+                           <span class="block-price ">Ø 38cm: 9,50€ | Ø 40cm 14,50€</span>
+                           <span class="dots"></span>
+                        </div><div class="block-content  pb-25 mb-25">
+                           <h2 class="mb-5 ">Forcaccia La Locanda</h2>
+                           <p>Tomatensoße, Mozzarella, italienische Salami, getrocknete Tomaten, Gorgonzola</p>
+                           <span class="block-price ">Ø 38cm: 9,50€ | Ø 40cm 14,50€</span>
+                           <span class="dots"></span>
+                        </div><div class="block-content  pb-25 mb-25">
+                           <h2 class="mb-5 ">Forcaccia Romagnola</h2>
+                           <p>Mozzarella, Mortadella, gehackte Pistazien, Provola (italienischer Schnittkäse)</p>
+                           <span class="block-price ">Ø 38cm: 9,50€ | Ø 40cm 14,50€</span>
+                           <span class="dots"></span>
+                        </div>
                         </div>
                      </li>
                      <!-- END PIZZA
@@ -1144,7 +1198,7 @@
                         <li><a href="#"><i class="icon-vimeo"></i></a></li>
                      </ul>
                      <div class="block-info mb-30">
-                        <p>Nürnberger Straße 5, <br> 90574 Roßtal, Deutschland</p>
+                        <p>Telefon: 09127-902905<br>Nürnberger Straße 5, <br> 90574 Roßtal, Deutschland</p>
                         <br>
                         <p><strong>Öffnungszeiten</strong><br>
                         <p>Montag: &ensp; 10.30 - 14.00 & 17.00 - 22.00 </p>
