--- a/index.html
+++ b/index.html
@@ -396,7 +396,7 @@
 
                            <div class="block-content  pb-25 mb-25">
                               <h2 class="mb-5 ">Cannelloni al Forno</h2>
-                              <p>Tomatensoße, Hackfleisch, Schinken, frische Champingnons</p>
+                              <p>Tomatensoße, Hackfleisch, Schinken, frische Champignons</p>
                               <span class="block-price ">6,90€</span>
                               <span class="dots"></span>
                            </div>
@@ -540,7 +540,7 @@
 
                             <div class="block-content  pb-25 mb-25">
                                 <h2 class="mb-5 ">Pizza Bruschetta</h2>
-                                <p>Pizzabrot, firsche Tomaten, Basilikum, Knoblauch, Balsamico-Creme</p>
+                                <p>Pizzabrot, frische Tomaten, Basilikum, Knoblauch, Balsamico-Creme</p>
                                 <span class="block-price ">Ø 38cm: 7,50€ | Ø 40cm 11,00€ | Ø 50cm 14,00€ </span>
                                 <span class="dots"></span>
                             </div>
@@ -548,7 +548,7 @@
 
                             <div class="block-content  pb-25 mb-25">
                                 <h2 class="mb-5 ">Pizza Caprese</h2>
-                                <p>Tomatensoße, Mozarella, frische Tomaten, Basilikum</p>
+                                <p>Tomatensoße, Mozzarella, frische Tomaten, Basilikum</p>
                                 <span class="block-price ">Ø 38cm: 7,90€ | Ø 40cm 11,90€ | Ø 50cm 15,90€ </span>
                                 <span class="dots"></span>
                             </div>
@@ -556,7 +556,7 @@
 
                             <div class="block-content  pb-25 mb-25">
                                 <h2 class="mb-5 ">Pizza Contadina</h2>
-                                <p>Tomatensoße, Mozarella, Sardellen, Karpern, Oliven</p>
+                                <p>Tomatensoße, Mozzarella, Sardellen, Karpern, Oliven</p>
                                 <span class="block-price ">Ø 38cm: 8,40€ | Ø 40cm 12,40€ | Ø 50cm 17,00€ </span>
                                 <span class="dots"></span>
                             </div>
@@ -564,7 +564,7 @@
 
                             <div class="block-content  pb-25 mb-25">
                                 <h2 class="mb-5 ">Pizza Speciale</h2>
-                                <p>Tomatensoße, Mozarella, Salami, Vorderschinken, frische Champinongs, firsche Peperionie, paprika</p>
+                                <p>Tomatensoße, Mozzarella, Salami, Vorderschinken, frische Champignongs, firsche Peperionie, paprika</p>
                                 <span class="block-price ">Ø 38cm: 8,40€ | Ø 40cm 12,50€ | Ø 50cm 17,00€ </span>
                                 <span class="dots"></span>
                             </div>
@@ -572,7 +572,7 @@
 
                             <div class="block-content  pb-25 mb-25">
                                 <h2 class="mb-5 ">Pizza Americana</h2>
-                                <p>Tomatensoße, Mozarella, Salami, Vorderschinken, Peperoni, Zwiebeln, Mais, Chilliöl</p>
+                                <p>Tomatensoße, Mozzarella, Salami, Vorderschinken, Peperoni, Zwiebeln, Mais, Chilliöl</p>
                                 <span class="block-price ">Ø 38cm: 8,40€ | Ø 40cm 12,50€ | Ø 50cm 17,00€ </span>
                                 <span class="dots"></span>
                             </div>
@@ -580,7 +580,7 @@
 
                             <div class="block-content  pb-25 mb-25">
                                 <h2 class="mb-5 ">Pizza Capricciosa</h2>
-                                <p>Tomatensoße, Mozarella, Vorderschinken, frische Champinongs, Artischocken, Oliven</p>
+                                <p>Tomatensoße, Mozzarella, Vorderschinken, frische Champinongs, Artischocken, Oliven</p>
                                 <span class="block-price ">Ø 38cm: 8,40€ | Ø 40cm 12,5€ | Ø 50cm 17,00€ </span>
                                 <span class="dots"></span>
                             </div>
@@ -588,7 +588,7 @@
 
                             <div class="block-content  pb-25 mb-25">
                                 <h2 class="mb-5 ">Pizza Hawaii</h2>
-                                <p>Tomatensoße, Mozarella, Vorderschinken, Ananas</p>
+                                <p>Tomatensoße, Mozzarella, Vorderschinken, Ananas</p>
                                 <span class="block-price ">Ø 38cm: 8,40€ | Ø 40cm 12,50€ | Ø 50cm 17,00€ </span>
                                 <span class="dots"></span>
                             </div>
@@ -596,7 +596,7 @@
 
                             <div class="block-content  pb-25 mb-25">
                                 <h2 class="mb-5 ">Pizza Tonno</h2>
-                                <p>Tomatensoße, Mozarella, Vorderschinken, frische Champinongs, Artischocken, Oliven</p>
+                                <p>Tomatensoße, Mozzarella, Vorderschinken, frische Champinongs, Artischocken, Oliven</p>
                                 <span class="block-price ">Ø 38cm: 8,40€ | Ø 40cm 12,50€ | Ø 50cm 17,00€ </span>
                                 <span class="dots"></span>
                             </div>
@@ -604,7 +604,7 @@
 
                             <div class="block-content  pb-25 mb-25">
                                 <h2 class="mb-5 ">Pizza Campagnola</h2>
-                                <p>Tomatensoße, Mozarella, gegrillte Zucchini, Aubergienen, Paprika, Knoblauch</p>
+                                <p>Tomatensoße, Mozzarella, gegrillte Zucchini, Aubergienen, Paprika, Knoblauch</p>
                                 <span class="block-price ">Ø 38cm: 8,90€ | Ø 40cm 13,90€ | Ø 50cm 18,40€ </span>
                                 <span class="dots"></span>
                             </div>
@@ -612,7 +612,7 @@
 
                             <div class="block-content  pb-25 mb-25">
                                 <h2 class="mb-5 ">Pizza Vegetaria</h2>
-                                <p>Tomatensoße, Mozarella, frische Champingongs, firsche Paprika, Peperonie, Artischocken, Oliven</p>
+                                <p>Tomatensoße, Mozzarella, frische Champigongs, firsche Paprika, Peperonie, Artischocken, Oliven</p>
                                 <span class="block-price ">Ø 38cm: 8,90€ | Ø 40cm 13,90€ | Ø 50cm 18,90€ </span>
                                 <span class="dots"></span>
                             </div>
@@ -620,7 +620,7 @@
 
                             <div class="block-content  pb-25 mb-25">
                                 <h2 class="mb-5 ">Pizza Salentina</h2>
-                                <p>Tomatensoße, Mozarella, italienische Salsiccia, gegrillte Paprika</p>
+                                <p>Tomatensoße, Mozzarella, italienische Salsiccia, gegrillte Paprika</p>
                                 <span class="block-price ">Ø 38cm: 8,90€ | Ø 40cm 13,90€ | Ø 50cm 18,40€ </span>
                                 <span class="dots"></span>
                             </div>
@@ -628,7 +628,7 @@
 
                             <div class="block-content  pb-25 mb-25">
                                 <h2 class="mb-5 ">Pizza Frutti di Mare</h2>
-                                <p>Tomatensoße, Mozarella, Meeresfrüchte, Knoblauch</p>
+                                <p>Tomatensoße, Mozzarella, Meeresfrüchte, Knoblauch</p>
                                 <span class="block-price ">Ø 38cm: 8,90€ | Ø 40cm 13,90€ | Ø 50cm 18,40€ </span>
                                 <span class="dots"></span>
                             </div>
@@ -636,7 +636,7 @@
 
                             <div class="block-content  pb-25 mb-25">
                                 <h2 class="mb-5 ">Pizza del Sud</h2>
-                                <p>Tomatensoße, Mozarella, Thunfisch, Kapern, Sardellen</p>
+                                <p>Tomatensoße, Mozzarella, Thunfisch, Kapern, Sardellen</p>
                                 <span class="block-price ">Ø 38cm: 8,90€ | Ø 40cm 13,90€ | Ø 50cm 18,40€ </span>
                                 <span class="dots"></span>
                             </div>
@@ -644,7 +644,7 @@
 
                             <div class="block-content  pb-25 mb-25">
                                 <h2 class="mb-5 ">Pizza Gamberetti</h2>
-                                <p>Tomatensoße, Mozarella, Shrimps, Knoblauch</p>
+                                <p>Tomatensoße, Mozzarella, Shrimps, Knoblauch</p>
                                 <span class="block-price ">Ø 38cm: 8,90€ | Ø 40cm 13,90€ | Ø 50cm 18,40€ </span>
                                 <span class="dots"></span>
                             </div>
@@ -652,7 +652,7 @@
 
                             <div class="block-content  pb-25 mb-25">
                                 <h2 class="mb-5 ">Pizza Sfiziosa</h2>
-                                <p>Tomatensoße, Mozarella, Thunfisch, rote Zwiebeln, Fetakäse</p>
+                                <p>Tomatensoße, Mozzarella, Thunfisch, rote Zwiebeln, Fetakäse</p>
                                 <span class="block-price ">Ø 38cm: 8,90€ | Ø 40cm 13,90€ | Ø 50cm 18,40€ </span>
                                 <span class="dots"></span>
                             </div>
@@ -668,7 +668,7 @@
 
                             <div class="block-content  pb-25 mb-25">
                                 <h2 class="mb-5 ">Pizza Maruzzella</h2>
-                                <p>Tomatensoße, Mozzarella, Vorderschinken, frische Champingongs, Artischocken, frische Tomaten, Oliven</p>
+                                <p>Tomatensoße, Mozzarella, Vorderschinken, frische Champigongs, Artischocken, frische Tomaten, Oliven</p>
                                 <span class="block-price ">Ø 38cm: 8,90€ | Ø 40cm 13,90€ | Ø 50cm 18,40€ </span>
                                 <span class="dots"></span>
                             </div>
@@ -676,7 +676,7 @@
 
                             <div class="block-content  pb-25 mb-25">
                                 <h2 class="mb-5 ">Pizza Bella Napoli</h2>
-                                <p>Tomatensoße, Mozzarella, italienische Salsicca, frische Champingons, frische Sahne</p>
+                                <p>Tomatensoße, Mozzarella, italienische Salsicca, frische Champigons, frische Sahne</p>
                                 <span class="block-price ">Ø 38cm: 8,90€ | Ø 40cm 13,90€ | Ø 50cm 18,40€ </span>
                                 <span class="dots"></span>
                             </div>
@@ -851,7 +851,7 @@
 
                             <div class="block-content  pb-25 mb-25">
                                 <h2 class="mb-5 ">Pizza Duchessa</h2>
-                                <p>Mozzarella die Bufala, Cherrytomaten, Sardellen, Ruccola</p>
+                                <p>Mozzarella di Bufala, Cherrytomaten, Sardellen, Ruccola</p>
                                 <span class="block-price ">Ø 38cm: 10,90€ | Ø 40cm 15,90€ | Ø 50cm 20,90€ </span>
                                 <span class="dots"></span>
                             </div>
@@ -859,7 +859,7 @@
 
                             <div class="block-content  pb-25 mb-25">
                                 <h2 class="mb-5 ">Pizza Gabriel</h2>
-                                <p>MOzzarella, Nduja Calabrese (weiche, scharfe kalabrsische Salami), frische Champingnons, getrocknete Tomaten</p>
+                                <p>Mozzarella, Nduja Calabrese (weiche, scharfe kalabrsische Salami), frische Champignons, getrocknete Tomaten</p>
                                 <span class="block-price ">Ø 38cm: 8,90€ | Ø 40cm 13,90€ | Ø 50cm 18,90€ </span>
                                 <span class="dots"></span>
                             </div>
@@ -867,7 +867,7 @@
 
                             <div class="block-content  pb-25 mb-25">
                                 <h2 class="mb-5 ">Pizza dello Chef</h2>
-                                <p>Mozzarella gemischte Pile, italienische Salsiccia, Lacuh</p>
+                                <p>Mozzarella gemischte Pilze, italienische Salsiccia, Lauch</p>
                                 <span class="block-price ">Ø 38cm: 8,90€ | Ø 40cm 13,90€ | Ø 50cm 20,40€ </span>
                                 <span class="dots"></span>
                             </div>
@@ -875,7 +875,7 @@
 
                             <div class="block-content  pb-25 mb-25">
                                 <h2 class="mb-5 ">Pizza Tropea</h2>
-                                <p>Mozzarella di Bufala, Ndju Calabrese (weiche, scharfe kalabresische Salami), Kapern, rote Zwiebeln</p>
+                                <p>Mozzarella di Bufala, Nduja Calabrese (weiche, scharfe kalabresische Salami), Kapern, rote Zwiebeln</p>
                                 <span class="block-price ">Ø 38cm: 10,90€ | Ø 40cm 15,90€ | Ø 50cm 20,40€ </span>
                                 <span class="dots"></span>
                             </div>
@@ -925,7 +925,7 @@
                               <span class="dots"></span>
                            </div><div class="block-content  pb-25 mb-25">
                            <h2 class="mb-5 ">Forcaccia Mediterranea</h2>
-                           <p>Tomatensoße, Mozzarella, scharfe kalabresische Salami, frische Champingnons, frische Tomaten, Oliven</p>
+                           <p>Tomatensoße, Mozzarella, scharfe kalabresische Salami, frische Champignons, frische Tomaten, Oliven</p>
                            <span class="block-price ">Ø 38cm: 9,50€ | Ø 40cm 14,50€</span>
                            <span class="dots"></span>
                         </div><div class="block-content  pb-25 mb-25">
@@ -934,8 +934,8 @@
                            <span class="block-price ">Ø 38cm: 9,50€ | Ø 40cm 14,50€</span>
                            <span class="dots"></span>
                         </div><div class="block-content  pb-25 mb-25">
-                           <h2 class="mb-5 ">Forcaccia Don Filipo</h2>
-                           <p>Tomatensoße, Mozzarella, Speck, frische Champingnons, Gorgonzola</p>
+                           <h2 class="mb-5 ">Forcaccia Don Filippo</h2>
+                           <p>Tomatensoße, Mozzarella, Speck, frische Champignons, Gorgonzola</p>
                            <span class="block-price ">Ø 38cm: 9,50€ | Ø 40cm 14,50€</span>
                            <span class="dots"></span>
                         </div><div class="block-content  pb-25 mb-25">
