--- a/index.html
+++ b/index.html
@@ -1200,9 +1200,42 @@
 	  <script src="js/placeholders.min.js" type="text/javascript"></script>
       <script src="js/script.js" type="text/javascript"></script>
 	  <script>
-		var myLazyLoad = new LazyLoad({
-    elements_selector: ".lazy"
-});
+         document.addEventListener("DOMContentLoaded", function() {
+            let lazyImages = [].slice.call(document.querySelectorAll("img.lazy"));
+            let active = false;
+
+            const lazyLoad = function() {
+               if (active === false) {
+                  active = true;
+
+                  setTimeout(function() {
+                     lazyImages.forEach(function(lazyImage) {
+                        if ((lazyImage.getBoundingClientRect().top <= window.innerHeight && lazyImage.getBoundingClientRect().bottom >= 0) && getComputedStyle(lazyImage).display !== "none") {
+                           lazyImage.src = lazyImage.dataset.src;
+                           lazyImage.srcset = lazyImage.dataset.srcset;
+                           lazyImage.classList.remove("lazy");
+
+                           lazyImages = lazyImages.filter(function(image) {
+                              return image !== lazyImage;
+                           });
+
+                           if (lazyImages.length === 0) {
+                              document.removeEventListener("scroll", lazyLoad);
+                              window.removeEventListener("resize", lazyLoad);
+                              window.removeEventListener("orientationchange", lazyLoad);
+                           }
+                        }
+                     });
+
+                     active = false;
+                  }, 200);
+               }
+            };
+
+            document.addEventListener("scroll", lazyLoad);
+            window.addEventListener("resize", lazyLoad);
+            window.addEventListener("orientationchange", lazyLoad);
+         });
 	  </script>
       <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBuBt0OSpvoLYz-yXTLJihXdGjvvJt9qOs&callback=initializeMap"></script>
       <!-- Google analytics -->
