--- a/index.html
+++ b/index.html
@@ -579,44 +579,44 @@
                            <h2 class="mb-30">Focacce</h2>
                         </div>
                         <div class="block-content  pb-25 mb-25">
-                           <h2 class="mb-5 ">Pizza Forcaccia</h2>
+                           <h2 class="mb-5 ">Pizza Focaccia</h2>
                            <p>Tomatensoße, Mozzarella, Thunfisch, Oliven, Emmentaler</p>
                            <span class="block-price ">Ø 32cm: 9,50€ | Ø 40cm 14,50€ </span>
                            <span class="dots"></span>
                         </div>
                         <div class="block-content  pb-25 mb-25">
-                           <h2 class="mb-5 ">Forcaccia Campagnola</h2>
+                           <h2 class="mb-5 ">Focaccia Campagnola</h2>
                            <p>Tomatensoße, Mozzarella, gegrillte Zucchini, Paprika und Auberginen, Oliven, Gewürze, Knoblauch</p>
                            <span class="block-price ">Ø 32cm: 9,50€ | Ø 40cm 14,50€</span>
                            <span class="dots"></span>
                         </div>
                         <div class="block-content  pb-25 mb-25">
-                           <h2 class="mb-5 ">Forcaccia 4 Formaggi</h2>
+                           <h2 class="mb-5 ">Focaccia 4 Formaggi</h2>
                            <p>Tomatensoße, Mozzarella,Emmentaler, Gorgonzola, Grana</p>
                            <span class="block-price ">Ø 32cm: 9,50€ | Ø 40cm 14,50€</span>
                            <span class="dots"></span>
                         </div><div class="block-content  pb-25 mb-25">
-                        <h2 class="mb-5 ">Forcaccia Mediterranea</h2>
+                        <h2 class="mb-5 ">Focaccia Mediterranea</h2>
                         <p>Tomatensoße, Mozzarella, scharfe kalabresische Salami, frische Champignons, frische Tomaten, Oliven</p>
                         <span class="block-price ">Ø 32cm: 9,50€ | Ø 40cm 14,50€</span>
                         <span class="dots"></span>
                      </div><div class="block-content  pb-25 mb-25">
-                        <h2 class="mb-5 ">Forcaccia Bianca</h2>
+                        <h2 class="mb-5 ">Focaccia Bianca</h2>
                         <p>Mozzarella, Speck, Artischocken, Philadelphia, Oliven</p>
                         <span class="block-price ">Ø 32cm: 9,50€ | Ø 40cm 14,50€</span>
                         <span class="dots"></span>
                      </div><div class="block-content  pb-25 mb-25">
-                        <h2 class="mb-5 ">Forcaccia Don Filippo</h2>
+                        <h2 class="mb-5 ">Focaccia Don Filippo</h2>
                         <p>Tomatensoße, Mozzarella, Speck, frische Champignons, Gorgonzola</p>
                         <span class="block-price ">Ø 32cm: 9,50€ | Ø 40cm 14,50€</span>
                         <span class="dots"></span>
                      </div><div class="block-content  pb-25 mb-25">
-                        <h2 class="mb-5 ">Forcaccia La Locanda</h2>
+                        <h2 class="mb-5 ">Focaccia La Locanda</h2>
                         <p>Tomatensoße, Mozzarella, italienische Salami, getrocknete Tomaten, Gorgonzola</p>
                         <span class="block-price ">Ø 32cm: 9,50€ | Ø 40cm 14,50€</span>
                         <span class="dots"></span>
                      </div><div class="block-content  pb-25 mb-25">
-                        <h2 class="mb-5 ">Forcaccia Romagnola</h2>
+                        <h2 class="mb-5 ">Focaccia Romagnola</h2>
                         <p>Mozzarella, Mortadella, gehackte Pistazien, Provola (italienischer Schnittkäse)</p>
                         <span class="block-price ">Ø 32cm: 9,50€ | Ø 40cm 14,50€</span>
                         <span class="dots"></span>
