--- a/index.html
+++ b/index.html
@@ -40,12 +40,12 @@
                <ul class="slides">
                   <li>
                      <div class="background-img zoom">
-                        <img class="lazy" src="img/17-1.jpg" alt="">
+                        <img class="lazy" src="img/bc1.png" alt="">
                      </div>
                   </li>
                   <li>
                      <div class="background-img zoom">
-                        <img class="lazy" src="img/15-1.jpg" alt="">
+                        <img class="lazy" src="img/bc1.png" alt="">
                      </div>
                   </li>
                </ul>
@@ -71,7 +71,7 @@
                         <li><a class="scroll" href="#menu">Speisekarte</a></li>
                         <li><a class="scroll" href="#reservation">Kontakt</a></li>
                         <li><a class="scroll" href="#gallery">Impressionen</a></li>
-                        <li><a class="scroll" href="#contact">Location</a></li>
+                        <li><a class="scroll" href="#contact">Ort</a></li>
                         <li><a class="scroll" href="/privacy.html">Datenschutz</a></li>
                         <li><a class="scroll" href="/imprint.html">Impressum</a></li>
                      </ul>
@@ -1116,7 +1116,7 @@
                <div class="row">
                   <div class="col-sm-8 col-sm-offset-2">
                      <div class="block-form">
-                        <form class="reservation-form " method="post" action="send.php">
+                        <form class="reservation-form " method="post" name="contact" netlify>
                            <div class="block-input ico-input">
                               <i class="icon-user-1"></i>
                               <label>Your name:</label>
