--- a/index.html
+++ b/index.html
@@ -458,7 +458,7 @@
 
                            <div class="block-content  pb-25 mb-25">
                               <h2 class="mb-5 ">Tagliatelle Norcina</h2>
-                              <p>Sohnesoße, gemischte Pilze, italienische Salsiccia</p>
+                              <p>Sahnesoße, gemischte Pilze, italienische Salsiccia</p>
                               <span class="block-price ">7,50€</span>
                               <span class="dots"></span>
                            </div>
