--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 
 
 <!DOCTYPE html>
-<html lang="en">
+<html lang="de">
    <head>
       <!-- Metas -->
       <meta charset="utf-8">
-      <title>Pizzeria in Roßtal</title>
-      <meta name="description" content="">
+      <title>Pizzeria La Locanda in Roßtal</title>
+      <meta name="description" content="Die italienische Pizzeria in Roßtal">
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
       <!-- Css -->
       <link href="css/bootstrap.css" rel="stylesheet" type="text/css" media="all"/>
